--- a/allcss/style.css
+++ b/allcss/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); */
+
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+HR:wght@100..400&display=swap');
 
 
@@ -36,7 +36,7 @@ body {
     content: "";
     position: absolute;
     bottom: 0;
-    background: url(/images/homebg.jpg) no-repeat center center;
+    background: url(images/homebg.jpg) no-repeat center center;
     /* background-attachment: fixed; */
     background-size: cover;
     left: 0;
