--- a/allcss/style.css
+++ b/allcss/style.css
@@ -36,7 +36,7 @@ body {
     content: "";
     position: absolute;
     bottom: 0;
-    background: url("/images/vk-bro-_79ZJS8pV70-unsplash.jpg") no-repeat center center;
+    background: url("/homebg.jpg") no-repeat center center;
     /* background-attachment: fixed; */
     background-size: cover;
     left: 0;
